@@ -599,6 +599,9 @@ Trunk (unreleased changes)
     HADOOP-5845. Build successful despite test failure on test-core target.
     (sharad)
 
+    HADOOP-5314. Prevent unnecessary saving of the file system image during 
+    name-node startup. (Jakob Homan via shv)
+
 Release 0.20.1 - Unreleased
 
   INCOMPATIBLE CHANGES
